# smol-shmm

./: Final.ipynb  INSTALL.md  Introduction to SMoL.ipynb  README.md  smol-shmm.cabal  stack.yaml
final-project/: final-notebook.ipynb
src/: SHMMInference.hs
src/.stack-work/intero/: intero13679xE_.hs
src/SMoL/Inference/: SHMM.hs
