name:                smol-shmm
version:             0.1.0.0
homepage:            https://github.com/githubuser/smol-shmm
license:             BSD3
license-file:        LICENSE
author:              Ryan Bernstein
maintainer:          ryan.bernstein@columbia.edu
copyright:           2018 Ryan Bernstein
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:       SHMMInference
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , parallel
                     , cassava
                     , bytestring
                     , process
                     , containers
                     , temporary
                     , sparse-lin-alg
                     , time
                     , shmm
                     , hashable
                     , monad-loops
                     , scientific
                     , smol
                     , mtl
